make-a-wish-salesforce/src/objects/npsp__Engagement_Plan__c.object
<CustomObject>
    <description>An Engagement Plan is a set of tasks that helps you engage with your constituents.</description>
    <fields>
        <fullName>npsp__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Engagement Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Engagement Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Engagement Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Completed_Tasks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completed Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Engagement Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Engagement_Plan_Template__c</fullName>
        <label>Engagement Plan Template</label>
        <referenceTo>npsp__Engagement_Plan_Template__c</referenceTo>
        <relationshipLabel>Engagement Plans</relationshipLabel>
        <relationshipName>Engagement_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npsp__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Engagement Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Recurring_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>Engagement Plans</relationshipLabel>
        <relationshipName>Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Status__c</fullName>
        <formula>IF( npsp__Completed_Tasks__c == npsp__Total_EP_Tasks__c, $Label.npsp__statusCompleted, IF (npsp__Completed_Tasks__c &gt; 0, $Label.npsp__statusInProgress, $Label.npsp__statusNotStarted))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Total_EP_Tasks__c</fullName>
        <formula>npsp__Engagement_Plan_Template__r.npsp__Total_Tasks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total EP Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Total_Tasks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Engagement Plan</label>
    <nameField>
        <displayFormat>EP-{0000}</displayFormat>
        <label>Engagement Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>